--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,53 @@
+.calc-app,
+.calc-app2 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.calc-app2 .form-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.l-box {
+  padding-bottom: 1px;
+}
 .calc-label,
 .calc-select {
   padding-left: 10px;
   padding-right: 5px;
 }
 .calc-row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
 }
-
 .calc-row label {
   font-weight: normal;
+}
+.calc-total {
+  font-size: 25px !important;
+}
+.calc-list {
+  margin-top: 0;
+}
+hr {
+  margin: .5em 0 !important;
 }
