--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
 }
 .calc-row label {
   font-weight: normal;
