--- a/assests/style.css
+++ b/assests/style.css
@@ -9,6 +9,11 @@
   width: 50%;
   justify-content: space-between;
 }
+@media screen and (min-width: 400px) {
+  .calc-app2 .form-item {
+    width: 70%;
+  }
+}
 .l-box {
   padding-bottom: 1px;
 }
