--- a/assests/style.css
+++ b/assests/style.css
@@ -9,7 +9,7 @@
   width: 50%;
   justify-content: space-between;
 }
-@media screen and (min-width: 400px) {
+@media screen and (max-width: 400px) {
   .calc-app2 .form-item {
     width: 70%;
   }
