--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,15 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
+  width: 70%;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-@media screen and (min-width: 400px) {
+@media screen and (max-width: 400px) {
   .calc-app2 .form-item {
-    width: 70%;
+    width: 50%;
   }
 }
 .l-box {
