--- a/assests/style.css
+++ b/assests/style.css
@@ -19,6 +19,11 @@
     width: 70%;
   }
 }
+@media screen and (max-width: 400px) {
+  .calc-app2 .form-item {
+    width: 90%;
+  }
+}
 .l-box {
   padding-bottom: 1px;
 }
