fixed the number spinners

--- a/assests/style.css
+++ b/assests/style.css
@@ -49,3 +49,12 @@
 hr {
   margin: .5em 0 !important;
 }
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance:textfield;
+}
